[project]
name = "cookie-rl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Dashiell Stander", email = "dstander@protonmail.com" }
]
dependencies = [
    "torch>=2.8.0",
    "numpy>=2.3.3",
    "shapely>=2.1.2",
    "tqdm>=4.67.1",
    "polars>=1.33.1",
    "stable-baselines3[extra]>=2.7.0",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.6",
    "gymnasium>=1.2.1",
    "quarto>=0.1.0",
    "tensorboard>=2.20.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cookie_rl"]
